[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/FPS_Weapons/shotgun.dae" type="PackedScene" id=1]
[ext_resource path="res://Assets/FPS_Weapons/shotgun.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/MuzzleFlashes/MuzzleFlash2.tga" type="Texture" id=3]
[ext_resource path="res://Assets/FPS_Weapons/Anim/Shotgun_shoot.tres" type="Animation" id=4]
[ext_resource path="res://Assets/FPS_Weapons/Anim/shotgun_de-equip.tres" type="Animation" id=5]
[ext_resource path="res://Assets/FPS_Weapons/Anim/shotgun_equip.tres" type="Animation" id=6]
[ext_resource path="res://Assets/Sounds/Effects/Weapons/handgun-reload.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/Effects/Weapons/shotgun-shoot.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]

resource_name = "equip"
length = 0.25
loop = false
step = 0.1
tracks/0/type = "transform"
tracks/0/path = NodePath("ArmatureShotgun")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0.1, 1, 0, 0, 0, 0, 1, 0, -1.94707e-07, 1, 1, 1, 0.35, 1, 0, 0, 0, 0, 1, 0, -1.94707e-07, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("ArmatureShotgun/Skeleton:fingers2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = true
tracks/1/enabled = true
tracks/1/keys = PoolRealArray( 0.1, 1, -1.5914e-07, -6.89179e-08, -2.45869e-07, 0.0738599, 0.0149718, -0.000289202, 0.997156, 1, 1, 1, 0.35, 1, -4.19095e-08, -1.24797e-07, -2.30968e-07, 0.0738599, 0.0149718, -0.00028919, 0.997156, 1, 1, 1 )
tracks/2/type = "transform"
tracks/2/path = NodePath("ArmatureShotgun/Skeleton:thumb1")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = true
tracks/2/enabled = true
tracks/2/keys = PoolRealArray( 0.1, 1, 1.78814e-07, 1.45286e-07, -1.19209e-07, -0.0175432, 0.22612, 0.166356, 0.959629, 1, 1, 1, 0.35, 1, 1.78814e-07, 1.00583e-07, -8.9407e-08, -0.0175432, 0.22612, 0.166356, 0.959629, 1, 1, 1 )
tracks/3/type = "transform"
tracks/3/path = NodePath("ArmatureShotgun/Skeleton:thumb2")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = true
tracks/3/enabled = true
tracks/3/keys = PoolRealArray( 0.1, 1, 1.58325e-08, -4.93601e-08, 2.23517e-08, -1.49012e-08, 3.72529e-09, 2.79397e-09, 1, 1, 1, 1, 0.35, 1, 6.51926e-09, -3.63216e-08, 9.68575e-08, -2.6077e-08, 5.58794e-09, -4.19095e-09, 1, 1, 1, 1 )
tracks/4/type = "transform"
tracks/4/path = NodePath("ArmatureShotgun/Skeleton:shells")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = true
tracks/4/enabled = true
tracks/4/keys = PoolRealArray( 0.1, 1, 0.0671812, 0.178393, 0.0270723, 0.290182, -0.106841, 0.0456328, 0.949893, 1, 1, 1, 0.166667, 1, 0.0574056, 0.14999, 0.0154331, 0.243582, -0.0880797, 0.0427446, 0.964926, 1, 1, 1, 0.233333, 1, 0.0334581, 0.0825831, 0.000221848, 0.135118, -0.0445141, 0.0357379, 0.989184, 1, 1, 1, 0.3, 1, 0.0102117, 0.0196915, 0.00101209, 0.0340736, -0.00405127, 0.0288718, 0.998994, 1, 1, 1, 0.35, 1, 0.00373023, 0.00254199, 0.00359264, 0.00611404, 0.00712481, 0.0269158, 0.999594, 1, 1, 1 )
tracks/5/type = "transform"
tracks/5/path = NodePath("ArmatureShotgun/Skeleton:Bone")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = true
tracks/5/enabled = true
tracks/5/keys = PoolRealArray( 0.1, 1, 0, 0, 0, 0, 0, -8.8203e-23, 1, 1, 1, 1, 0.35, 1, 0, 0, 0, 0, 0, -8.8203e-23, 1, 1, 1, 1 )
tracks/6/type = "transform"
tracks/6/path = NodePath("ArmatureShotgun/Skeleton:shotgun")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = true
tracks/6/enabled = true
tracks/6/keys = PoolRealArray( 0.1, 1, 0, 0, 0, 0.287457, -0.106034, 0.0173264, 0.951748, 1, 1, 1, 0.166667, 1, 0, 0, 0, 0.240259, -0.0886239, 0.0144815, 0.966546, 1, 1, 1, 0.233333, 1, 0, 0, 0, 0.130468, -0.0481255, 0.0078639, 0.990253, 1, 1, 1, 0.3, 1, 0, 0, 0, 0.0282666, -0.0104267, 0.00170376, 0.999545, 1, 1, 1, 0.35, 1, 0, 0, 0, 0, -5.88998e-15, 3.4428e-22, 1, 1, 1, 1 )
tracks/7/type = "transform"
tracks/7/path = NodePath("ArmatureShotgun/Skeleton:barrel")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = true
tracks/7/enabled = true
tracks/7/keys = PoolRealArray( 0.1, 1, -1.01391e-08, 3.34112e-08, -2.98023e-08, 2.23212e-08, 2.79396e-09, -4.6566e-09, 1, 1, 1, 1, 0.35, 1, -2.55351e-15, 0, 0, 0, 7.52874e-15, 5.42322e-24, 1, 1, 1, 1 )
tracks/8/type = "transform"
tracks/8/path = NodePath("ArmatureShotgun/Skeleton:up_arm")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = true
tracks/8/enabled = true
tracks/8/keys = PoolRealArray( 0.1, 1, 4.47035e-08, 2.98023e-08, -1.49012e-08, 0.27632, 0.139256, -0.238735, 0.920467, 1, 1, 1, 0.166667, 1, 4.47035e-08, 2.98023e-08, -1.49012e-08, 0.256697, 0.146458, -0.215698, 0.930662, 1, 1, 1, 0.3, 1, 4.47035e-08, 2.98023e-08, -1.49012e-08, 0.168702, 0.175775, -0.113456, 0.963209, 1, 1, 1, 0.35, 1, 4.47035e-08, 2.98023e-08, -1.49012e-08, 0.156727, 0.179412, -0.0996688, 0.966082, 1, 1, 1 )
tracks/9/type = "transform"
tracks/9/path = NodePath("ArmatureShotgun/Skeleton:low_arm")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = true
tracks/9/enabled = true
tracks/9/keys = PoolRealArray( 0.1, 1, -1.15484e-07, -2.98023e-08, 1.49012e-07, -0.451682, 0.425211, -0.0791777, 0.780327, 1, 1, 1, 0.166667, 1, -5.30854e-08, -4.47035e-08, 2.08616e-07, -0.458657, 0.412882, -0.0684117, 0.783889, 1, 1, 1, 0.3, 1, -7.07805e-08, -7.45058e-09, 1.49012e-07, -0.48705, 0.358061, -0.0216455, 0.796308, 1, 1, 1, 0.35, 1, -3.35276e-08, -4.47035e-08, 1.78814e-07, -0.49061, 0.350586, -0.0154004, 0.797593, 1, 1, 1 )
tracks/10/type = "transform"
tracks/10/path = NodePath("ArmatureShotgun/Skeleton:palm")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = true
tracks/10/enabled = true
tracks/10/keys = PoolRealArray( 0.1, 1, -1.04308e-07, -7.91624e-09, 1.19209e-07, 0.0515018, -0.0706953, 0.907291, 0.411306, 1, 1, 1, 0.166667, 1, -1.56462e-07, -5.55301e-08, 1.19209e-07, 0.0623244, -0.0677641, 0.89178, 0.443004, 1, 1, 1, 0.3, 1, -1.00583e-07, -2.31666e-08, 2.98023e-08, 0.108125, -0.0540175, 0.81058, 0.573019, 1, 1, 1, 0.35, 1, -1.3411e-07, -1.66474e-08, 5.96046e-08, 0.114012, -0.0520828, 0.798197, 0.589211, 1, 1, 1 )
tracks/11/type = "transform"
tracks/11/path = NodePath("ArmatureShotgun/Skeleton:fingers1")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = true
tracks/11/enabled = true
tracks/11/keys = PoolRealArray( 0.1, 1, 4.00469e-08, 5.58794e-09, 8.9407e-08, -0.00496747, 0.0159614, 0.0844323, 0.996289, 1, 1, 1, 0.35, 1, 1.08033e-07, 5.58794e-09, 1.19209e-07, -0.00496747, 0.0159613, 0.0844323, 0.996289, 1, 1, 1 )

[sub_resource type="Animation" id=2]

resource_name = "idle"
length = 0.0416667
loop = false
step = 0.1
tracks/0/type = "transform"
tracks/0/path = NodePath("ArmatureShotgun")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0, 0, 0, 0, 1, 0, -1.94707e-07, 1, 1, 1, 0.0416667, 1, 0, 0, 0, 0, 1, 0, -1.94707e-07, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("ArmatureShotgun/Skeleton:fingers2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = true
tracks/1/enabled = true
tracks/1/keys = PoolRealArray( 0, 1, -4.19095e-08, -1.24797e-07, -2.30968e-07, 0.0738599, 0.0149718, -0.00028919, 0.997156, 1, 1, 1, 0.0416667, 1, -4.19095e-08, -1.24797e-07, -2.30968e-07, 0.0738599, 0.0149718, -0.00028919, 0.997156, 1, 1, 1 )
tracks/2/type = "transform"
tracks/2/path = NodePath("ArmatureShotgun/Skeleton:thumb1")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = true
tracks/2/enabled = true
tracks/2/keys = PoolRealArray( 0, 1, 1.78814e-07, 1.00583e-07, -8.9407e-08, -0.0175432, 0.22612, 0.166356, 0.959629, 1, 1, 1, 0.0416667, 1, 1.78814e-07, 1.00583e-07, -8.9407e-08, -0.0175432, 0.22612, 0.166356, 0.959629, 1, 1, 1 )
tracks/3/type = "transform"
tracks/3/path = NodePath("ArmatureShotgun/Skeleton:thumb2")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = true
tracks/3/enabled = true
tracks/3/keys = PoolRealArray( 0, 1, 6.51926e-09, -3.63216e-08, 9.68575e-08, -2.6077e-08, 5.58794e-09, -4.19095e-09, 1, 1, 1, 1, 0.0416667, 1, 6.51926e-09, -3.63216e-08, 9.68575e-08, -2.6077e-08, 5.58794e-09, -4.19095e-09, 1, 1, 1, 1 )
tracks/4/type = "transform"
tracks/4/path = NodePath("ArmatureShotgun/Skeleton:shells")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = true
tracks/4/enabled = true
tracks/4/keys = PoolRealArray( 0, 1, 0.00373023, 0.00254199, 0.00359264, 0.00611404, 0.00712481, 0.0269158, 0.999594, 1, 1, 1, 0.0416667, 1, 0.00373023, 0.00254199, 0.00359264, 0.00611404, 0.00712481, 0.0269158, 0.999594, 1, 1, 1 )
tracks/5/type = "transform"
tracks/5/path = NodePath("ArmatureShotgun/Skeleton:Bone")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = true
tracks/5/enabled = true
tracks/5/keys = PoolRealArray( 0, 1, 0, 0, 0, 0, 0, -8.8203e-23, 1, 1, 1, 1, 0.0416667, 1, 0, 0, 0, 0, 0, -8.8203e-23, 1, 1, 1, 1 )
tracks/6/type = "transform"
tracks/6/path = NodePath("ArmatureShotgun/Skeleton:shotgun")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = true
tracks/6/enabled = true
tracks/6/keys = PoolRealArray( 0, 1, 0, 0, 0, 0, -5.88998e-15, 3.4428e-22, 1, 1, 1, 1, 0.0416667, 1, 0, 0, 0, 0, -5.88998e-15, 3.4428e-22, 1, 1, 1, 1 )
tracks/7/type = "transform"
tracks/7/path = NodePath("ArmatureShotgun/Skeleton:barrel")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = true
tracks/7/enabled = true
tracks/7/keys = PoolRealArray( 0, 1, -2.55351e-15, 0, 0, 0, 7.52874e-15, 5.42322e-24, 1, 1, 1, 1, 0.0416667, 1, -2.55351e-15, 0, 0, 0, 7.52874e-15, 5.42322e-24, 1, 1, 1, 1 )
tracks/8/type = "transform"
tracks/8/path = NodePath("ArmatureShotgun/Skeleton:up_arm")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = true
tracks/8/enabled = true
tracks/8/keys = PoolRealArray( 0, 1, 4.47035e-08, 2.98023e-08, -1.49012e-08, 0.156727, 0.179412, -0.0996688, 0.966082, 1, 1, 1, 0.0416667, 1, 4.47035e-08, 2.98023e-08, -1.49012e-08, 0.156727, 0.179412, -0.0996688, 0.966082, 1, 1, 1 )
tracks/9/type = "transform"
tracks/9/path = NodePath("ArmatureShotgun/Skeleton:low_arm")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = true
tracks/9/enabled = true
tracks/9/keys = PoolRealArray( 0, 1, -3.35276e-08, -4.47035e-08, 1.78814e-07, -0.49061, 0.350586, -0.0154004, 0.797593, 1, 1, 1, 0.0416667, 1, -3.35276e-08, -4.47035e-08, 1.78814e-07, -0.49061, 0.350586, -0.0154004, 0.797593, 1, 1, 1 )
tracks/10/type = "transform"
tracks/10/path = NodePath("ArmatureShotgun/Skeleton:palm")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = true
tracks/10/enabled = true
tracks/10/keys = PoolRealArray( 0, 1, -1.3411e-07, -1.66474e-08, 5.96046e-08, 0.114012, -0.0520828, 0.798197, 0.589211, 1, 1, 1, 0.0416667, 1, -1.3411e-07, -1.66474e-08, 5.96046e-08, 0.114012, -0.0520828, 0.798197, 0.589211, 1, 1, 1 )
tracks/11/type = "transform"
tracks/11/path = NodePath("ArmatureShotgun/Skeleton:fingers1")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = true
tracks/11/enabled = true
tracks/11/keys = PoolRealArray( 0, 1, 1.08033e-07, 5.58794e-09, 1.19209e-07, -0.00496747, 0.0159613, 0.0844323, 0.996289, 1, 1, 1, 0.0416667, 1, 1.08033e-07, 5.58794e-09, 1.19209e-07, -0.00496747, 0.0159613, 0.0844323, 0.996289, 1, 1, 1 )

[sub_resource type="Animation" id=3]

resource_name = "no_ammo"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("ReloadSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}

[node name="Shotgun" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="ArmatureShotgun" parent="." index="0"]

transform = Transform( -1, 0, -3.89414e-07, 0, 1, 0, 3.89414e-07, 0, -1, 0, 0, 0 )

[node name="Arm" parent="ArmatureShotgun/Skeleton" index="0"]

layers = 2

[node name="Shotgun" parent="ArmatureShotgun/Skeleton" index="1"]

layers = 2
_sections_unfolded = [ "material" ]

[node name="BoneAttachment" type="BoneAttachment" parent="ArmatureShotgun/Skeleton" index="2"]

transform = Transform( 1, -1.27952e-06, 1.62524e-20, -1.27952e-06, -1, -1.84524e-07, 2.27374e-13, 1.84524e-07, -1, -6.59789e-21, 0.00130419, 0.486839 )
bone_name = "barrel"

[node name="Muzzle" type="Position3D" parent="ArmatureShotgun/Skeleton/BoneAttachment" index="0"]

transform = Transform( 0.999774, 0.010772, 0.0183333, 0.0107738, -0.999942, 0, 0.0183322, 0.00019752, -0.999832, -0.0138859, 0.00680196, -0.601201 )
visible = false
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Sprite" type="Sprite3D" parent="ArmatureShotgun/Skeleton/BoneAttachment/Muzzle" index="0"]

transform = Transform( 1, -1.49012e-08, 0, 0, 1, 2.98023e-08, 0, 0, 1, 0.0207579, 0, 0 )
visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
centered = true
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 0.0
pixel_size = 0.02
axis = 2
transparent = true
shaded = false
double_sided = true
alpha_cut = 0
texture = ExtResource( 3 )
vframes = 1
hframes = 1
frame = 0
region_enabled = false
region_rect = Rect2( 0, 0, 0, 0 )
_sections_unfolded = [ "Visibility" ]

[node name="Light" type="OmniLight" parent="ArmatureShotgun/Skeleton/BoneAttachment/Muzzle" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.223179, 0 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 0.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
omni_range = 1.0
omni_attenuation = 1.36604
omni_shadow_mode = 1
omni_shadow_detail = 1
_sections_unfolded = [ "Light", "Omni" ]

[node name="AnimationPlayer" parent="." index="1"]

autoplay = "shotgun_equip"
anims/Shotgun_shoot = ExtResource( 4 )
anims/equip = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/no_ammo = SubResource( 3 )
anims/shotgun_de-equip = ExtResource( 5 )
anims/shotgun_equip = ExtResource( 6 )

[node name="ReloadSound" type="AudioStreamPlayer3D" parent="." index="2"]

stream = ExtResource( 7 )
attenuation_model = 0
unit_db = 0.0
unit_size = 1.0
max_db = 3.0
autoplay = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0

[node name="ShotSound" type="AudioStreamPlayer3D" parent="." index="3"]

stream = ExtResource( 8 )
attenuation_model = 0
unit_db = 0.0
unit_size = 1.0
max_db = 3.0
autoplay = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0


